injection-template.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  name: details-v1
  namespace: bookinfo
  labels:
    app: details
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: details
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: details
        version: v1
    spec:
      containers:
        - name: details
          image: 'docker.io/istio/examples-bookinfo-details-v1:1.15.0'
          ports:
            - containerPort: 9080
              protocol: TCP
          imagePullPolicy: IfNotPresent 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  name: productpage-v1
  namespace: bookinfo
  labels:
    app: productpage
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productpage
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: productpage
        version: v1
    spec:
      containers:
        - name: productpage
          image: 'docker.io/istio/examples-bookinfo-productpage-v1:1.15.0'
          ports:
            - containerPort: 9080
              protocol: TCP
          imagePullPolicy: IfNotPresent 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  name: ratings-v1
  namespace: bookinfo
  labels:
    app: ratings
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ratings
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: ratings
        version: v1
    spec:
      containers:
        - name: ratings
          image: 'docker.io/istio/examples-bookinfo-ratings-v1:1.15.0'
          ports:
            - containerPort: 9080
              protocol: TCP
          imagePullPolicy: IfNotPresent 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  name: reviews-v1
  namespace: bookinfo
  labels:
    app: reviews
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: reviews
        version: v1
    spec:
      containers:
        - name: reviews
          image: 'docker.io/istio/examples-bookinfo-reviews-v1:1.15.0'
          ports:
            - containerPort: 9080
              protocol: TCP
          imagePullPolicy: IfNotPresent 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  name: reviews-v2
  namespace: bookinfo
  labels:
    app: reviews
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v2
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: reviews
        version: v2
    spec:
      containers:
        - name: reviews
          image: 'docker.io/istio/examples-bookinfo-reviews-v2:1.15.0'
          ports:
            - containerPort: 9080
              protocol: TCP
          imagePullPolicy: IfNotPresent 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: '1'
  name: reviews-v3
  namespace: bookinfo
  labels:
    app: reviews
    version: v3
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reviews
      version: v3
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: 'true'
      labels:
        app: reviews
        version: v3
    spec:
      containers:
        - name: reviews
          image: 'docker.io/istio/examples-bookinfo-reviews-v3:1.15.0'
          ports:
            - containerPort: 9080
              protocol: TCP
          imagePullPolicy: IfNotPresent 
---
