bookinfo-mtls-destinationrule.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: bookinfo-client-mtls
spec:
  host: productpage-bookinfo.apps.cluster-031c.031c.sandbox1281.opentlc.com
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
